# fastapi-genai-01

./: README.md  pyproject.toml
studentapi/: main.py
